# sen66-interface

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  audit.toml
.github/: CODEOWNER
.github/workflows/: audit.yaml  integration.yaml  release.yaml  sbom.yaml
src/: command.rs  error.rs  interface.rs  lib.rs  util.rs
src/configuration/: mod.rs  temperature.rs  tuning.rs
src/data/: data_status.rs  measurement.rs  mod.rs  product_data.rs  state.rs
