[package]
authors = ["Felix 'Gronner' Bräunling <gronner@mailbox.org>"]
categories = ["embedded", "no-std"]
description = "An I2C driver for the SEN66 sensor in Rust."
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["sensor", "environment"]
name = "sen66-interface"
readme = "README.md"
repository = "https://github.com/Gronner/sen66-interface"
rust-version = "1.85.1"
version = "1.0.0"

[dependencies]
defmt = { version = "1.0.1", optional = true }
duplicate = "2.0.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
num = { version = "0.4.3", default-features = false }
thiserror = { version = "2.0.12", default-features = false }

[features]
default = ["async"]
async = []
blocking = []
defmt = ["embedded-hal-async/defmt-03", "embedded-hal/defmt-03", "dep:defmt"]

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["embedded-hal-async"] }
tokio = { version = "1.44.2", features = ["macros", "rt"] }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(tarpaulin_include)'] }
